[package]
name = "tic-tac-toe"
version = "0.1.0"
publish = false
authors = ["PinYu1618 <pycc1618@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8.1" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }
image = { version = "0.24", default-features = false }
lazy_static = "1.4.0"

bevy-inspector-egui = { version = "0.13.0" }

[build-dependencies]
embed-resource = "1.4"
